# StAR

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon
R/: contract.R  example.R  generic.R  parse.R  star.R  stats.R
src/: ast.cpp  ast.h  contractparser.cpp  contractparser.h  gensource.cpp  gensource.h  main.cpp  main.zig  parse.cpp  parse.h  parse.zig  rtype.h  sourceparser.cpp  type.h  typelang.cpp  typelang.h
